<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_reset"
        android:title="@string/menu_reset"
        android:icon="@android:drawable/ic_menu_revert"
        android:orderInCategory="1"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/menu_save"
        android:title="@string/menu_save"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="2"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_load"
        android:title="@string/menu_load"
        android:icon="@android:drawable/ic_menu_upload"
        android:orderInCategory="3"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_add_object"
        android:title="@string/menu_add_object"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="4"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_add_connection"
        android:title="@string/menu_add_connection"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="5"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_edit"
        android:title="@string/menu_edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="6"
        app:showAsAction="never" />
</menu>